src/components/ViewRecipe.css
.backdrop {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.3);
    padding: 50px;
}

.modal {
    background-color: #fff;
    border-radius: 5px;
    max-width: 50%;
    min-height: 30%;
    margin: 0 auto;
    padding-top: 10px;
    padding: 10px;
}

.modal h3 {
    padding: 0;
    margin: 0;
}

